@@ -4,38 +4,82 @@ PRJDIR          = ../..
 
 !include $(PRJDIR)/Bcc.inc
 
-CFLAGS = $(CFLAGS) -I. -I./libiberty -DHAVE_CONFIG_H
+CFLAGS = $(CFLAGS) -I. -I./libiberty -I./libcpp -I./libcpp/include -DHAVE_CONFIG_H
+AWK = gawk
 
-OBJECTS         = sdcpp.obj cppinit.obj \
-                  cpplib.obj cpplex.obj cppmacro.obj cppexp.obj \
-                  cppfiles.obj cpphash.obj cpperror.obj cppdefault.obj \
-                  hashtable.obj mkdeps.obj prefix.obj version.obj \
-                  line-map.obj cpptrad.obj \
-                  sdcpp-opts.obj cppcharset.obj hashtab.obj c-incpath.obj c-ppoutput.obj opts.obj options.obj diagnostic.obj pretty-print.obj \
-                  safe-ctype.obj obstack.obj splay-tree.obj lbasename.obj \
-                  hex.obj concat.obj \
-                  xmalloc.obj xstrdup.obj xexit.obj xmemdup.obj xstrerror.obj getpwd.obj vasprintf.obj
+LIBCPP_OBJS =	charset.obj directives.obj errors.obj expr.obj files.obj identifiers.obj \
+		init.obj lex.obj line-map.obj macro.obj mkdeps.obj symtab.obj traditional.obj
 
-TARGET          = $(PRJDIR)/bin/sdcpp.exe
+LIBIBERTY_OBJS = concat.obj fopen_unlocked.obj getpwd.obj hashtab.obj hex.obj \
+		 lbasename.obj md5.obj obstack.obj safe-ctype.obj splay-tree.obj \
+		 vasprintf.obj xexit.obj xmalloc.obj xmemdup.obj xstrdup.obj \
+		 xstrerror.obj
+
+SDCC_OBJS = sdcpp.obj sdcpp-opts.obj c-ppoutput.obj cppdefault.obj prefix.obj \
+	    version.obj opts.obj options.obj c-incpath.obj
+
+OBJECTS = $(SDCC_OBJS) $(LIBCPP_OBJS) $(LIBIBERTY_OBJS)
+
+TARGET = $(PRJDIR)/bin/sdcpp.exe
 
 all: $(TARGET)
 
 auto-host.h: auto-host_vc_in.h
         copy auto-host_vc_in.h auto-host.h > nul
 
+##########################
+# Libcpp
+
+charset.obj: libcpp\charset.c
+directives.obj: libcpp\directives.c
+errors.obj: libcpp\errors.c
+expr.obj: libcpp\expr.c
+files.obj: libcpp\files.c
+identifiers.obj: libcpp\identifiers.c
+init.obj: libcpp\init.c
+lex.obj: libcpp\lex.c
+line-map.obj: libcpp\line-map.c
+macro.obj: libcpp\macro.c
+mkdeps.obj: libcpp\mkdeps.c
+symtab.obj: libcpp\symtab.c
+traditional.obj: libcpp\traditional.c
+
+##########################
+# Libiberty
+
+concat.obj: libiberty\concat.c
+fopen_unlocked.obj: libiberty\fopen_unlocked.c
+getpwd.obj: libiberty\getpwd.c
+hashtab.obj: libiberty\hashtab.c
+hex.obj: libiberty\hex.c
+lbasename.obj: libiberty\lbasename.c
+md5.obj: libiberty\md5.c
+obstack.obj: libiberty\obstack.c
+safe-ctype.obj: libiberty\safe-ctype.c
+splay-tree.obj: libiberty\splay-tree.c
+vasprintf.obj: libiberty\vasprintf.c
+xexit.obj: libiberty\xexit.c
+xmalloc.obj: libiberty\xmalloc.c
+xmemdup.obj: libiberty\xmemdup.c
+xstrdup.obj: libiberty\xstrdup.c
+xstrerror.obj: libiberty\xstrerror.c
+
+##########################
+# Sdcpp
+
 $(TARGET): auto-host.h $(OBJECTS)
         $(CC) $(CFLAGS) -e$(TARGET) $(OBJECTS)
 
-safe-ctype.obj: libiberty\safe-ctype.c
-obstack.obj: libiberty\obstack.c
-splay-tree.obj: libiberty\splay-tree.c
-lbasename.obj: libiberty\lbasename.c
-hex.obj: libiberty\hex.c
-concat.obj: libiberty\concat.c
-xmalloc.obj: libiberty\xmalloc.c
-xstrdup.obj: libiberty\xstrdup.c
-xexit.obj: libiberty\xexit.c
-xmemdup.obj: libiberty\xmemdup.c
-xstrerror.obj: libiberty\xstrerror.c
-getpwd.obj: libiberty\getpwd.c
-vasprintf.obj: libiberty\vasprintf.c
+optionlist.tmp:
+	$(AWK) -f opt-gather.awk sdcpp.opt > optionlist.tmp
+
+options.c: optionlist.tmp
+	$(AWK) -f opt-functions.awk -f optc-gen.awk -v header_name="config.h system.h options.h" optionlist.tmp > options.c
+
+options.h: optionlist.tmp
+	$(AWK) -f opt-functions.awk -f opth-gen.awk optionlist.tmp > options.h 
+
+sdcpp.obj: sdcpp.c options.h
+sdcpp-opts.obj: sdcpp-opts.c options.h
+options.obj: options.c options.h
+opts.obj: opts.c options.h
